infra/ingress/api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: development
  annotations:
    cert-manager.io/issuer: letsencrypt-api
spec: 
  tls:
    - hosts:
      - dev.route.kube.enigmacamp.com
      secretName: letsencrypt-api
  rules:
    - host: dev.route.kube.enigmacamp.com
      http:
        paths:
          - path: /api/golang
            pathType: Prefix
            backend:
              service:
                name: go-api-service # samain di Serive app
                port:
                  number: 8080
  ingressClassName: nginx
