infra/ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argo
  namespace: argocd
  annotations:
    cert-manager.io/issuer: letsencrypt-argo
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec: 
  ingressClassName: nginx
  tls:
    - hosts:
      - argo.jdnielss.my.id
      secretName: letsencrypt-argo
  rules:
    - host: argo.jdnielss.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-service # samain di Serive app
                port:
                  name: https
