infra/ingress/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: kube-prometheus-stack
  annotations:
    cert-manager.io/issuer: letsencrypt-grafana
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec: 
  ingressClassName: nginx
  tls:
    - hosts:
      - monitoring.jdnielss.my.id
      secretName: letsencrypt-grafana
  rules:
    - host: monitoring.jdnielss.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  name: https
